Updates swagger
