# docs/swagger.json
@@ -401,6 +401,11 @@
         },
         "/api/v1/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns all users",
                 "consumes": [
                     "application/json"
